# yew-nav-link

./: .gitignore  .mlc.json  .rultor.yml  .rust-diff-analyzer.toml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo-deny.toml  Cargo.toml  Cargo_macros.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MACRO_IMPLEMENTATION_REPORT.md  Makefile.toml  README.md  REUSE.toml  SECURITY.md  cliff.toml  deny.toml
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: actionlint.yml  changelog.yml  ci.yml  dependabot-automerge.yml  docs.yml  nightly.yml  pages.yml  performance.yml  release.yml  reusable-ci.yml  security.yml  supply-chain-security.yml  version-bump.yml
.hooks/: pre-commit
.reuse/: dep5
LICENSES/: MIT.txt
benches/: path.rs
coverage-report/html/: index.html
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: basic.spec.ts  bootstrap.spec.ts  fixtures.ts  nested-routes.spec.ts  tailwind.spec.ts
example/: Cargo.toml  build.rs  index.html
example/src/: demo_popup.rs  doc_metadata.rs  doc_parser.rs  file_tree.rs  main.rs  routes.rs
example/styles/: _examples.scss  _file-tree.scss  _tables.scss  _tokens.scss
examples/: README.md
examples/basic/: Cargo.toml  README.md  index.html
examples/bootstrap/: Cargo.toml  README.md  index.html
examples/comprehensive/: Cargo.toml  README.md
examples/comprehensive/src/: code_utils.rs  demo_popup.rs  doc_metadata.rs  doc_page.rs  doc_parser.rs  file_tree.rs  main.rs  routes.rs  templates.rs
examples/comprehensive/src/pages/: badge_doc.rs  basic_example.rs  bootstrap_example.rs  breadcrumbs_doc.rs  custom_breadcrumbs.rs  custom_css_features.rs  dropdown_doc.rs  examples_home.rs  home.rs  hooks_doc.rs  icon_doc.rs  macros_doc.rs  mod.rs  nav_divider_doc.rs  nav_link_doc.rs  nav_list_doc.rs  navigation_hooks.rs  nested_routes_example.rs  not_found.rs  pagination_doc.rs  tabs_doc.rs  tailwind_example.rs  utils_doc.rs  with_macros_example.rs
examples/comprehensive/src/pages/home/: api_stats.rs  feature_card.rs  hero.rs  metadata.rs  mod.rs
examples/comprehensive/styles/: _cards.scss  _code.scss  _demo.scss  _examples.scss  _hero.scss  _layout.scss  _popup.scss  _reset.scss  _responsive.scss  main.scss
examples/nested-routes/: Cargo.toml  README.md  index.html
examples/no-macros/: Cargo.toml  index.html
examples/tailwind/: Cargo.toml  README.md  index.html
examples/with-macros/: Cargo.toml  README.md  index.html
macros/: Cargo.toml
macros/src/: breadcrumbs.rs  lib.rs  link.rs  list.rs  tabs.rs
src/: attrs.rs  breadcrumbs.rs  errors.rs  lib.rs  lib_macros.rs  macros.rs  nav_link.rs
src/active_link/: mod.rs  mode.rs  nav_link.rs  props.rs  utils.rs
src/components/: badge.rs  dropdown.rs  header.rs  icon.rs  mod.rs  page_item.rs  page_link.rs  pagination.rs  pagination_page.rs  tab_item.rs  tab_panel.rs  tabs.rs  text.rs
src/declarative_macros/: basic.rs  navigation.rs  pagination.rs  routable_ext.rs
src/hooks/: mod.rs  navigation.rs  route.rs
src/macros/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PATTERNS.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  lib.rs  link.rs  mod.rs  pagination.rs
src/macros/declarative/: basic.rs  mod.rs  navigation.rs  pagination.rs  routable.rs
src/macros/function/: mod.rs
src/macros/macros/: breadcrumbs.rs  list.rs  menu.rs  mod.rs  pagination.rs  tabs.rs
src/nav/: divider.rs  item.rs  list.rs  mod.rs
src/utils/: mod.rs  path.rs
src/utils/keyboard/: mod.rs  (+3 more)
tests/: attrs_test.rs  components_test.rs  dropdown_test.rs  errors_test.rs  hooks_route_test.rs  keyboard_test.rs  macros_test.rs  nav_item_test.rs  nav_list_test.rs  pagination_test.rs  url_codec_test.rs  utils_test.rs
tests/wasm/: README.md
(+134 files in other folders)
