[package]
name = "yew-nav-link"
version = "0.3.0"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
edition = "2024"
rust-version = "1.91.0"
description = "Navigation link component for yew-router"
documentation = "https://docs.rs/yew-nav-link"
readme = "README.md"
repository = "https://github.com/RAprogramm/yew-nav-link"
license = "MIT"
keywords = ["yew", "router", "nav", "link"]
categories = ["gui", "wasm"]

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
