[package]
name = "yew-nav-link-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Procedural macros for yew-nav-link"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
license = "MIT"
repository = "https://github.com/RAprogramm/yew-nav-link"
documentation = "https://docs.rs/yew-nav-link-macros"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1"
yew = "0.23"
yew-router = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
