[package]
name = "yew-nav-link-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for yew-nav-link"
license = "MIT"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
yew-nav-link = { path = "../..", version = "0.4" }

[lib]
name = "yew_nav_link_macros"
path = "lib.rs"
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
